# tauri-dynamic-update-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-hub-deploy.yml
docs/: README.md
src/: logics.rs  main.rs  models.rs
